--- a/k.html
+++ b/k.html
@@ -8,15 +8,7 @@
 </script>
 </head>
 <body>
-<<<<<<< HEAD
-branch han으로 변경후 커밋
-   
-=======
-수정요
-한인섭
-수정요
-ㅋㅋㅋㅋㅋㅋㅋㅋ   
->>>>>>> master
+current page
 </body>
 
 </html>
